--- a/Cursos.html
+++ b/Cursos.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos - Érika</title>
-    <link rel="icon" type="image/x-icon" href="/fotos/Favicon.webp">
-    <link rel="stylesheet" href="estilos/menu.css">
-    <link rel="stylesheet" href="estilos/imagens.css">
-    <link rel="stylesheet" href="estilos/cards.css">
+    <link rel="icon" type="image/x-icon" href="Favicon.webp">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="imagens.css">
+    <link rel="stylesheet" href="cards.css">
 </head>
 <body>
     <div id="conteudo">
