--- a/Pejota.html
+++ b/Pejota.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PJ - Érika</title>
-    <link rel="icon" type="image/x-icon" href="/fotos/favicon.png">
-    <link rel="stylesheet" href="/Estilos//menu.css">
-    <link rel="stylesheet" href="estilos//imagens.css">
-    <link rel="stylesheet" href="/Estilos/cards.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="imagens.css">
+    <link rel="stylesheet" href="cards.css">
 </head>
 <body>
     <div class="conteúdo">
@@ -23,35 +23,35 @@
         </div>
         <div class="textos">
             <div class="card"></div>
-            <img src="Fotos/pulsera-varias.png" alt="">
+            <img src="pulsera-varias.png" alt="">
             <p>
                 São três pulseiras diferentes, feitas com pedrinhas de miçangas, com infeites e muita criatividade.
             </p>
         </div>
         <div class="textos">
             <div class="card"></div>
-            <img src="Fotos/pulseira amarela.png" alt="">
+            <img src="pulseira amarela.png" alt="">
             <p>
                 É uma pulseira feita de miçangas, de pedrinhas amarelas e dourada, feita a mão. 
             </p>
         </div>
         <div class="textos">
             <div class="card"></div>
-            <img src="Fotos/pulsera-rosa.jpeg" alt="">
+            <img src="pulsera-rosa.jpeg" alt="">
             <p>
                 É uma pulseira feita de miçangas, de pedrinhas rosas com um enfeite de emoji, feita a mão. 
             </p>
         </div>
         <div class="textos">
             <div class="card"></div>
-            <img src="Fotos/pulsera-verde.png" alt="">
+            <img src="pulsera-verde.png" alt="">
             <p>
                 É uma pulseira feita de miçangas, de pedrinhas verdes e dourada, feita a mão. 
             </p>
         </div>
         <div class="textos">
             <div class="card"></div>
-            <img src="Fotos/pulsera-roxa.jpeg" alt="">
+            <img src="pulsera-roxa.jpeg" alt="">
             <p>
                 É uma pulseira feita de miçangas, de pedrinhas roxas e lilás com um enfente de flor roxa, feita a mão. 
             </p>
