--- a/habilidades.html
+++ b/habilidades.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habilidades - Érika </title>
-    <link rel="icon" type="image/x-icon" href="/fotos/Favicon.webp">
-    <link rel="stylesheet" href="estilos/menu.css">
-    <link rel="stylesheet" href="estilos/imagens.css">
-    <link rel="stylesheet" href="/estilos/cards.css">
+    <link rel="icon" type="image/x-icon" href="Favicon.webp">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="imagens.css">
+    <link rel="stylesheet" href="cards.css">
 </head>
 <body>
     <div id="conteudo">
@@ -62,10 +62,10 @@
              </div>
              <h2>Filmes que eu gosto</h2>
             <div class="card flex">
-                <a class="card" href="">Enrolados<img src="Fotos/enrolados.webp" alt=""></a>
-                <a class="card" href="">Assim que acaba<img src="Fotos/Assim que acaba.webp" alt=""></a>
-                <a class="card" href="">Milagres no Paraíso<img src="Fotos/milagres.jpg" alt=""></a>
-                <a class="card" href="">Bridgerton<img src="Fotos/bridgerton.webp" alt=""></a>
+                <a class="card" href="">Enrolados<img src="enrolados.webp" alt=""></a>
+                <a class="card" href="">Assim que acaba<img src="Assim que acaba.webp" alt=""></a>
+                <a class="card" href="">Milagres no Paraíso<img src="milagres.jpg" alt=""></a>
+                <a class="card" href="">Bridgerton<img src="bridgerton.webp" alt=""></a>
             </div>
         </div>
     </div>
