--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Érika Garré Lima</title>
-    <link rel="icon" type="image/x-icon" href="/fotos/Favicon.webp">
-    <link rel="stylesheet" href="estilos/menu.css">
-    <link rel="stylesheet" href="estilos/cards.css">
-    <link rel="stylesheet" href="estilos/texto.css">
+    <link rel="icon" type="image/x-icon" href="Favicon.webp">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="cards.css">
+    <link rel="stylesheet" href="texto.css">
     
 </head>
 <body>
@@ -20,19 +20,19 @@
             </nav>
         <div id="pessoal">
             <div id="nome"><br><h1>Érika Garré Lima</h1></div>
-            <img src="Fotos/eu...jpg" width="100px" alt="">
+            <img src="eu...jpg" width="100px" alt="">
             <div id="dados">
-               <a href="https://wa.me/98986284548/?text='Olá! Gostei do seu currículo'"target="_blank" id="whatsapp"><img src="Fotos/Whatsapp.jpeg" alt="" width="10px">98 9 8628-4548</a><br>
+               <a href="https://wa.me/98986284548/?text='Olá! Gostei do seu currículo'"target="_blank" id="whatsapp"><img src="Whatsapp.jpeg" alt="" width="10px">98 9 8628-4548</a><br>
               <a href="https://ww.instagram.com/@erika_limax17" target="_blank" id="instagram">
-                <img src="Fotos/Instagram.png" alt="" width="20px">
+                <img src="Instagram.png" alt="" width="20px">
                 @erika_limax17
               </br></a> 
               <a href="mailto:erikagarre3@gmail.com" target="_blank" id="email">
-              <img src="Fotos/Mail.jpg" alt="" width="20px">
+              <img src="Mail.jpg" alt="" width="20px">
                 erikagarre3@gmail.com 
               </a><br>
               <a href="https://www.github.com/Lima739" target="_blank" id="github">
-                <img src="Fotos/Github.webp" alt="" width="20px">
+                <img src="Github.webp" alt="" width="20px">
                 Lima739 
               </a><br>
                 Endereço: Av.Jucelino Kubitschek Q.28 L.16 S.José de Oliveira Martins <br> 
@@ -43,37 +43,37 @@
             <a href="">
                 <div id="documentos">
                     Documentos
-                    <img src="Fotos/IWord.svg" alt="" width="40px">
+                    <img src="IWord.svg" alt="" width="40px">
                   </div>
              </a>
             <a href=""> 
                 <div id="apresentacoes">
                     Apresentações
-                    <img src="Fotos/Apresentação.jpg" alt="" width="40px">
+                    <img src="Apresentação.jpg" alt="" width="40px">
                 </div>
             </a>
             <a href=""> 
                 <div id="Planilha">
                     Planinha
-                    <img src="Fotos/excel.webp" alt="" width="40px">
+                    <img src="excel.webp" alt="" width="40px">
                 </div>
             </a>
             <a href=""> 
                 <div id="HTML">
                     Códigos HTML
-                    <img src="Fotos/HTML.jpg" alt=""  width="40px">
+                    <img src="HTML.jpg" alt=""  width="40px">
                 </div>
             </a>
             <a href="">
                 <div id="CSS">
                     Códigos CSS
-                    <img src="Fotos/CSS.webp" alt="" width="40px">
+                    <img src="CSS.webp" alt="" width="40px">
                 </div>
             </a>
             <a href=""> 
                 <div id="JS">
                     Códigos Java Script
-                    <img src="Fotos/JS.jpg" alt="" width="40px">
+                    <img src="JS.jpg" alt="" width="40px">
                 </div>
             </a>
         </div>
