--- a/habilidades.html
+++ b/habilidades.html
@@ -62,10 +62,10 @@
              </div>
              <h2>Filmes que eu gosto</h2>
             <div class="card flex">
-                <a class="card" href="">Enrolados<img src="enrolados.webp" alt=""></a>
-                <a class="card" href="">Assim que acaba<img src="Assim que acaba.webp" alt=""></a>
-                <a class="card" href="">Milagres no Paraíso<img src="milagres.jpg" alt=""></a>
-                <a class="card" href="">Bridgerton<img src="bridgerton.webp" alt=""></a>
+                <a class="card" href="">Enrolados<img src="enrolados.webp" alt=""  width="20px></a>
+                <a class="card" href="">Assim que acaba<img src="Assim que acaba.webp" alt=""  width="20px></a>
+                <a class="card" href="">Milagres no Paraíso<img src="milagres.jpg" alt=""  width="20px></a>
+                <a class="card" href="">Bridgerton<img src="bridgerton.webp" alt=""  width="20px></a>
             </div>
         </div>
     </div>
